GETメソッドを追加
